--- a/public/views/partials/mlintro.html
+++ b/public/views/partials/mlintro.html
@@ -56,7 +56,7 @@ svg {
         <button ng-click='classify()'>Classify Data</button> <button ng-click='predictClass()'>Predict Class</button> <button ng-click='clearClassify()'>Clear</button>
       </div>
       <div class="col-md-7">
-        <h2 class="featurette-heading">Classification <span class="text-muted">Predicting a discrete valued output</span></h2>
+        <h2 class="featurette-heading">Classification <span class="text-muted">Predicting a Discrete Valued Output</span></h2>
       </div>
         <p class="lead">Observed data is modeled so that unobserved data can be classified.  </p>
         <p class='lead'>Example: Cancer<br>
