--- a/public/views/partials/team.html
+++ b/public/views/partials/team.html
@@ -90,7 +90,7 @@
         </div>
         <div class="col-md-8 col-md-offset-1" style="{float:none; display:inline-block; vertical-align:middle;}">
           <h3 class="text-info">Kwyn Alice Meagher</h3>
-          <h4> Full-stack engineer. Programing polyglot. Machine learning, and parallel computing enthusiast. </h4>
+          <h4> Full-stack engineer. Programming polyglot. Machine learning and parallel computing enthusiast. </h4>
         </div>
       </div>
     </div>
@@ -108,7 +108,7 @@
         </div>
         <div class="col-md-8 col-md-offset-1" style="{float:none; display:inline-block; vertical-align:middle;}">
           <h3 class="text-info">Scott Zhang</h3>
-          <h4> Web developer and former management consultant. Loves Javascript, and en route to becoming Random Forest Guru. </h4>
+          <h4> Web developer and former management consultant. Loves Javascript, and en route to becoming Random Forests Guru. </h4>
         </div>
       </div>
     </div>
@@ -127,7 +127,7 @@
         </div>
         <div class="col-md-8 col-md-offset-1" style="{float:none; display:inline-block; vertical-align:middle;}">
           <h3 class="text-info">Sonali Dayal</h3>
-          <h4> Biochemist now hacker. Expert feature extractor for machine learning.</h4>
+          <h4> Data engineer and former biochemist. Expert feature extractor for machine learning.</h4>
         </div>
       </div>
     </div>
