--- a/public/views/mainindex.html
+++ b/public/views/mainindex.html
@@ -25,7 +25,7 @@
     <div class="content galaxyclass" ng-controller='GalaxyClassController'>
       <div class="row galaxyClass">
         <div class="col-md-5">
-          <div class="panel-heading " style="background-color : #101010; text-shadow: 3px 3px 3px #333333;">
+          <div class="panel-heading" style="border-radius: 15px">
             <h2 class="text-info text-center" style="color: #FFFFFF">Algorithm Inputs</h2>
           </div>
           <img class="img-responsive img-rounded galaxy" style="width: 500px"ng-src="{{galaxyURL}}">
@@ -34,7 +34,6 @@
           </div>
         </div>
         <div class="col-md-7">
-          <div class="row tableWhole">
             <div class="panel panel-default">
               <!-- Default panel contents -->
               <div class="panel-heading " style="background-color : #101010; text-shadow: 3px 3px 3px #333333;">
@@ -62,7 +61,6 @@
               </table>
               </div>
             </div>
-          </div>
         </div>
       </div>
     </div>
