--- a/public/views/partials/team.html
+++ b/public/views/partials/team.html
@@ -13,7 +13,7 @@
         <h4 class="lead pull-left">January 2014 Cohort</h4>
       </div>
       <div class="col-md-8">
-        <img class="featurette-image img-responsive img-rounded" src="../../images/teamwhole.jpg" alt="Team image">
+        <img class="featurette-image img-responsive img-rounded team" src="../../images/teamwhole.jpg" alt="Team image">
       </div>
     </div>
   </div>
