--- a/public/views/partials/dataExplaination.html
+++ b/public/views/partials/dataExplaination.html
@@ -7,7 +7,7 @@
     Our package included a set of <a href="https://en.wikipedia.org/wiki/Training_set">training data</a> and a set of <a href="https://en.wikipedia.org/wiki/Test_set">test data</a></h3><br>
       <ul>
         <li><h4 class="text-info">Understanding your Inputs</h4>
-          <ul><li>The training data with which we planned to train our ship's navigation system included thousands of input vectors, along with accompanying answer vectors. In our analysis of these images, we examined their dimensions (424x424), noticed that the galaxies were consistently centered, and saw that the images were in color.</ul></li>
+          <ul><li>The training data with which we planned to train our ship's navigation system included thousands of input vectors, along with accompanying answer vectors. In our analysis of these images, we examined their dimensions (424x424), noticed that the galaxies were consistently centered in each image, and noticed that the images were in color.</ul></li>
         </li>
 <!-- Align this picture properly -->
 <!--           <div class="col-md-5">
@@ -35,7 +35,7 @@
         <li><h4 class="text-info">Understanding your Answers</h4>
           <ul><li>Your output will be the foundation on which you build your machine. An understanding of your output will create relevant avenues for future research.</ul></li>
         <li><h4 class="text-info">Understanding your Measurement</h4>
-          <ul><li>Understanding the method by which you choose to assess your success will be the guideline for your future development. Be sure the measurement you use is what you want to measure. This link is a resource for several different types of <a href=" http://www.cs.cornell.edu/courses/cs578/2003fa/performance_measures.pdf">accuracy tests</a>.</ul></li>
+          <ul><li>/////Understanding the method by which you choose to assess your success will be the guideline for your future development. Be sure the measurement you use is what you want to measure.///// This link is a resource for several different types of <a href=" http://www.cs.cornell.edu/courses/cs578/2003fa/performance_measures.pdf">accuracy tests</a>.</ul></li>
         <li><h4 class="text-info">Below are some great sites for some sample data sets</h4>
           <ul><li><a href="http://www.kaggle.com/competitions">Kaggle Competitions</a></ul></li>
           <ul><li><a href="https://archive.ics.uci.edu/ml/datasets.html">UCI Machine Learning Repository</a></ul></li>  
