--- a/views/index.html
+++ b/views/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-
     <script src="../bower_components/jquery/dist/jquery.js"></script>
+    <script src="../bower_components/jquery.localScroll/jquery.localScroll.min.js"></script>
+    <script src="../bower_components/jquery.scrollTo/jquery.scrollTo.min.js"></script>  
     <script src="../styles/bootstrapDist/js/bootstrap.min.js"></script>
     <script src="../styles/bootstrapIndexAssets-js/docs.min.js"></script>
     <script src='../bower_components/angular/angular.js'></script>
@@ -14,7 +15,7 @@
     <script src='../scripts/directives/randomForestsDirective.js'></script>
     <script src='../scripts/directives/featuresDirective.js'></script>
     <script src="../bower_components/d3/d3.min.js" charset="utf-8"></script>
-    <script src="../bower_components/c3/c3.min.js"></script>
+    <script src="../bower_components/c3/c3.min.js"></script>  
 
     <link rel="shortcut icon" href="./../assets/ico/favicon.ico">
     <link rel='stylesheet' href="../styles/bootstrapDist/css/bootstrap.min.css" >
