merges changes with sonali's updates

--- a/public/views/partials/team.html
+++ b/public/views/partials/team.html
@@ -7,8 +7,7 @@ $(document).ready(function() {
 });
 </script>
 
-<div class="container contact" ng-controller='ContactController'>
-    <br>
+<div class="container contact" ng-controller='ContactController'><br>
     <br>
     <br>
   <a name='top'></a>
