--- a/public/views/partials/iterationAndTesting.html
+++ b/public/views/partials/iterationAndTesting.html
@@ -7,7 +7,7 @@
   <h3>Our heroes set out taking their first pass at training a machine learning algorithm</h4><br>
       <ul>
         <li><h4 class="text-info">Iteration Based Implementation</h4>
-          <ul><li>Our heroes decided on an iterative (build and fix) model for implementing their first machine learning algorithm. With this model, our heroes hoped to take advantage of quickly gaining a high-level view of our project and gaining more insight on priorities. They were guided by a <a href="http://www.kaggle.com/c/galaxy-zoo-the-galaxy-challenge/forums/t/6803/beating-the-benchmark">forum posting</a> </ul></li></li> and set off on their journey.
+          <ul><li>Our heroes decided on an iterative (build and fix) model for implementing their first machine learning algorithm. With this model, our heroes hoped to take advantage of quickly gaining a high-level view of our project and gaining more insight on priorities. They were guided by a <a href="http://www.kaggle.com/c/galaxy-zoo-the-galaxy-challenge/forums/t/6803/beating-the-benchmark">forum posting</a> and set off on their journey.</ul></li>
           <li><h4 class="text-info">First Features</h4>
           <ul><li>Our heroes viewed the first features as a broad and wholistic set of data. They cropped and grayscaled the images, using the output as an initial set of features. This minimal level of complexity allowed for the fewest complications when they had to pass this data to their machine.</ul></li>
         </li></li>
