finished gramatical check

--- a/public/views/partials/improvingYourAlgorithm.html
+++ b/public/views/partials/improvingYourAlgorithm.html
@@ -18,9 +18,9 @@
   <h3 class="pull-left">Our Heroes' Epic Battle with Error Margins</h4><br><br><br><br>
       <ul>
         <li><h4 class="text-info">Playing with the Algorithm's Parameters</h4>
-          <ul><li>The parameters that may be adjusted in a Random Forests algorithm include the number of trees we use, maximum tree depth, the number of features to use, and the size of the subset of features each tree can choose from. Our heroes adjusted these parameters to try and find an optimal algorithm configuration for our problem.</ul></li>
+          <ul><li>The parameters that may be adjusted in a Random Forests algorithm include the number of trees used, maximum tree depth, the number of features to use, and the size of the subset of features each tree can choose from. Our heroes adjusted these parameters to try and find an optimal algorithm configuration for their problem.</ul></li>
         <li><h4 class="text-info">Adding to our Feature Arsenal</h4>
-          <ul><li>Our heroes added additional input features to feed to their learning algorithm that they thought would decrease the generalization error observed once the algorithm was trained. Measuring generalization error for each of the different outputs they produced gave them an idea of what they could improve. Sometimes adding features that seemed helpful actually ended up increasing their generalization error. Our heroes hypothesize that this was the case because the new features may have been increasing our model's bias towards those features of the data.</ul></li>
+          <ul><li>Our heroes added additional input features to feed to their learning algorithm that they thought would decrease the generalization error observed once the algorithm was trained. Measuring generalization error for each of the different outputs they produced gave them an idea of what they could improve. Sometimes adding features that seemed helpful actually ended up increasing their generalization error. Our heroes hypothesize that this was the case because the new features may have been increasing their model's bias towards those features of the data.</ul></li>
         </li></li>
 </div>
 
