--- a/views/index.html
+++ b/views/index.html
@@ -11,6 +11,7 @@
     <script src='../scripts/randomTreeGenerator.js'></script>
     <script src='../scripts/app.js'></script>
     <script src="../../scripts/controllers/mlintro.js"></script>
+    <script src="../../scripts/controllers/guideController.js"></script>
     <script src='../scripts/directives/visualizationDirective.js'></script>
     <script src='../scripts/directives/randomForestsDirective.js'></script>
     <script src='../scripts/directives/featuresDirective.js'></script>
