--- a/public/styles/index.css
+++ b/public/styles/index.css
@@ -124,6 +124,18 @@ li{
 .regression-btns {
   margin-left: -2%;
 }
+.btn-primary:hover{
+  border: 1px solid black;
+}
+.btn-primary:focus{
+  outline: 0;
+}
+.btn-primary:active{
+  outline:0;
+  -webkit-box-shadow: inset 0 1px 4px rgba(0, 0, 0, 0.6);
+  -moz-box-shadow: inset 0 1px 4px rgba(0, 0, 0, 0.6);
+  box-shadow: inset 0 1px 4px rgba(0, 0, 0, 0.6);
+}
 .galaxyClass {
   border: 1px solid black;
   padding: 15px;
@@ -184,6 +196,7 @@ li{
   background-color: #2b3e50;
 }
 
+
 @keyframes animate {
   0% {
     opacity: 0.7;
@@ -224,8 +237,6 @@ li{
 .topLink{
   text-align: center;
 }
-
-
 
 /* CUSTOMIZE THE NAVBAR
 -------------------------------------------------- */
