--- a/public/views/mainindex.html
+++ b/public/views/mainindex.html
@@ -6,9 +6,9 @@
           <img src="../images/bluegalaxy.jpg">
           <div class="container">
             <div class="carousel-caption">
-              <h1>Guidelines for Applying your Machine Learning Algorithm</h1>
-              <h2>"A Hitchhikers Guide to Classifying Galaxies"</h2>
-              <a class="btn btn-lg btn-primary" href="#/theGuide" role="button">View Now</a></p>
+              <h2 class="title">Guidelines for Applying your Machine Learning Algorithm</h2>
+              <h3>"A Hitchhikers Guide to Classifying Galaxies"</h3>
+              <a class="btn btn-lg btn-primary" href="#/theGuide" role="button">View Now</a>
             </div>
           </div>
         </div>
