--- a/public/views/partials/team.html
+++ b/public/views/partials/team.html
@@ -1,11 +1,6 @@
 <script src="../../styles/bootstrapDist/js/bootstrap.min.js"></script>
 <script src="../../styles/bootstrapIndexAssets-js/docs.min.js"></script>
 <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
-<script type="text/javascript">
-$(document).ready(function() {
-   $('.col-md-4').localScroll({duration:800});
-});
-</script>
 
 <div class="container contact" ng-controller='ContactController'><br>
     <br>
@@ -31,7 +26,7 @@ $(document).ready(function() {
     </div>
   </div>
 
-  <div class="content">
+  <div class="container index">
   <div class="media">
     <div class="row">
       <div class="col-md-3">
@@ -153,7 +148,11 @@ $(document).ready(function() {
     <a href="#top" class='pull-right'>Back to Top</a>
   </div>
 </div>
-
+<script type="text/javascript">
+$(document).ready(function() {
+   $('.col-md-4').localScroll({duration:800});
+});
+</script>
 
 
 
