--- a/views/index.html
+++ b/views/index.html
@@ -22,9 +22,7 @@
     <link rel='stylesheet' href="../styles/bootstrapDist/css/bootstrap.min.css" >
     <link rel='stylesheet' href="../styles/index.css">
     <link rel="stylesheet" type="text/css" href="../bower_components/c3/c3.css">
-    <link href='http://fonts.googleapis.com/css?family=Dosis' rel='stylesheet' type='text/css'>
-
-
+    <link href='http://fonts.googleapis.com/css?family=Averia+Sans+Libre:400,700|Lemon' rel='stylesheet' type='text/css'>
     <title>A Visual Guide to Machine Learning</title>
 
   </head>
