--- a/public/views/partials/dataExplanation.html
+++ b/public/views/partials/dataExplanation.html
@@ -4,7 +4,7 @@
   </div>
 <div class="row">
   <h3>As our heroes gathered, looking forward to their upcoming quest, they received a package from <a href="http://www.galaxyzoo.org/#/">Galaxy Zoo HQ</a>.
-    Their package included a set of <a href="https://en.wikipedia.org/wiki/Training_set">training data</a> and a set of <a href="https://en.wikipedia.org/wiki/Test_set">test data</a></h3><br>.
+    Their package included a set of <a href="https://en.wikipedia.org/wiki/Training_set">training data</a> and a set of <a href="https://en.wikipedia.org/wiki/Test_set">test data</a>.</h3><br>
       <ul>
         <li><h4 class="text-info">Understanding your Inputs</h4>
           <ul><li>The training data with which we planned to train our ship's navigation system included thousands of input vectors, along with accompanying answer vectors. In our analysis of these images, we examined their dimensions (424x424), noticed that the galaxies were consistently centered in each image, and noticed that the images were in color.</ul></li>
