--- a/public/views/mainindex.html
+++ b/public/views/mainindex.html
@@ -30,7 +30,7 @@
           </div>
           <img class="img-responsive img-rounded galaxy" style="width: 500px"ng-src="{{galaxyURL}}">
           <div class="col-md-3 col-md-offset-4"><br> 
-            <button ng-click="nextGalaxy();" type="button" class="btn btn-primary">Next Galaxy</button> 
+            <button ng-click="nextGalaxy();" type="button" class="btn btn-primary">Input Next Galaxy</button> 
           </div>
         </div>
         <div class="col-md-7">
