completing intro page

--- a/public/views/partials/mlintro.html
+++ b/public/views/partials/mlintro.html
@@ -6,7 +6,24 @@ svg {
 }
 </style>
 
-      <div class="container mlintro" ng-controller='MLIntroController'>
+    <div class="container mlintro" ng-controller='MLIntroController'>
+      <div class = "container index">
+        <div class="chapterTitle">
+          <h3>Hitchhikers Guide to Classifying Galaxies</h3>
+          <h4>An Epic Walkthrough of Implenting Machine Learning Algorithms</h4>
+        </div>
+        <div class="row featurette">
+          <div class="col-md-5">
+            <img class="featurette-image img-responsive" src="../../images/introPic.jpg">
+          </div>
+          <div class="col-md-7">
+            <h2 class="featurette-heading">Our Origins</h2>
+          </div>
+            <p class="lead">Called into action by Galaxy Zoo Headquarters, our heroes began preparing explore the universe, sending news of sentient life back home. While travelling, they will be cryogenically frozen only to be awoken during critical moments of their mission. Our heroes devised a plan to categorize the galaxies they visit, knowing that galaxy shape and morphological features are strong indicators of sentient life. The more accurate their ship in detecting galactic features, the more efficient our heroes expected their trip to be. Teaming up, they set off on their quest.</p>
+          </div>
+
+          <hr class="featurette-divider">
+
        <div class = "content">
         <div class="row featurette">
           <div class="col-md-5">
