added back to top and address bar routes

--- a/public/views/partials/team.html
+++ b/public/views/partials/team.html
@@ -12,12 +12,12 @@
         <h2 class="heading pull-left">Hack Reactor Machine Learning Team</h2>
         <h4 class="pull-left">Members from the January 2014 Cohort</h4><br>
         <ul class="pull-left">
-          <li><a href="#scott">Scott</a>, Team Project Manager</li>
-          <li><a href="#jeanette">Jeanette</a></li>
-          <li><a href="#sonali">Sonali</a></li>
-          <li><a href="#charles">Charles</a></li>
-          <li><a href="#kwyn">Kwyn</a></li>
-          <li><a href="#vinnie">Vinnie</a></li>
+          <li><a href="#scott" onclick="window.location.hash = hash;">Scott</a>, Team Project Manager</li>
+          <li><a href="#jeanette" onclick="window.location.hash = hash;">Jeanette</a></li>
+          <li><a href="#sonali" onclick="window.location.hash = hash;">Sonali</a></li>
+          <li><a href="#charles" onclick="window.location.hash = hash;">Charles</a></li>
+          <li><a href="#kwyn" onclick="window.location.hash = hash;">Kwyn</a></li>
+          <li><a href="#vinnie" onclick="window.location.hash = hash;">Vinnie</a></li>
         <ul>
       </div>
       <div class="col-md-8">
@@ -145,7 +145,7 @@
         </div>
       </div>
     </div>
-    <a href="#top" class='pull-right'>Back to Top</a>
+    <a href="#top" class='pull-right' onclick="window.location.hash = hash;">Back to Top</a>
   </div>
 </div>
 <script type="text/javascript">
