--- a/public/views/partials/theguide.html
+++ b/public/views/partials/theguide.html
@@ -1,30 +1,31 @@
 <a name="top"></a>
-<div class="container index">
-  <br><br><br><br><br>
-  <div class="row">
-    <div class="subNav">
-      <a href="/theGuide/theBlueprint">The Blueprint</a> |
-      <a href="/theGuide/discoveringOurData">Discovering Our Data</a> |
-      <a href="/theGuide/researchingOurPath">Researching Our Path</a> |
-      <a href="/theGuide/testFlight">Building our 1st Machine and Test Flight</a> |
-      <a href="/theGuide/optimizing">Optimizing Our Machine and Travelling Into Space</a><br/>
-    </div>
-    <div class = "feature">
-      <div class = "default">
-        <style>
-          svg {
-            border: 1px solid black;
-            background-color: white;
-            border-radius: 10px;
-          }
-        </style>
-      </div>
-    </div>
-    <ng-include src="subPage" [onload=""]></ng-include>
-    <div class="topLink">
-      <a href="#top" onclick="window.location.hash = hash;">Back To Top</a>
+ <div class="row">
+  <div class="subNav">
+    <ul class="nav">
+      <li><a href="/theGuide/theBlueprint">The Blueprint</a></li> |
+      <li><a href="/theGuide/discoveringOurData">Discovering Our Data</a></li> |
+      <li><a href="/theGuide/researchingOurPath" class="one">Researching Our Path</a>
+         <ul class="dropdown">
+            <li><a href="/randomForestsVisual">Random Forest Visualization</a></li>
+            </ul>
+       </li> |
+      <li><a href="/theGuide/testFlight">Building our 1st Machine and Test Flight</a></li> |
+      <li><a href="/theGuide/optimizing">Optimizing Our Machine and Travelling Into Space</a></li><br/>
+    </ul>
+  </div>
+  <div class = "feature">
+    <div class = "default">
+      <style>
+      svg {
+        border: 1px solid black;
+        background-color: white;
+        border-radius: 10px;
+      }
+      </style>
     </div>
   </div>
+  <div class="topLink">
+  <a href="#top" onclick="window.location.hash = hash;">Back To Top</a>
 </div>
 
 <script src="../../styles/bootstrapDist/js/bootstrap.min.js"></script>
@@ -36,4 +37,11 @@
   $('.subNav').on('click', function() {
     $('.default').empty();
   });
+  $('a.one').hover(function() {
+    $('.dropdown').slideDown();
+  });
+  $('.dropdown').on('mouseleave', function() {
+    $('.dropdown').slideUp();
+  })
+
 </script>
