--- a/public/views/partials/theguide.html
+++ b/public/views/partials/theguide.html
@@ -1,9 +1,10 @@
 <a name="top"></a>
+
 <div class="container index"><br><br><br><br><br>
  <div class="row">
   <div class="subNav">
     <ul class="nav">
-      <li><a href="/theGuide/theBlueprint">The Blueprint</a></li> |
+      <li><a href="/theGuide/ourOrigins">Our Origins</a></li> |
       <li><a href="/theGuide/discoveringOurData">Discovering Our Data</a></li> |
       <li><a href="/theGuide/researchingOurPath" class="one">Researching Our Path</a>
          <ul class="dropdown">
@@ -25,7 +26,7 @@
   <a href="#top" onclick="window.location.hash = hash;">Back To Top</a>
   </div>
 </div>
-
+</div>
 <script src="../../styles/bootstrapDist/js/bootstrap.min.js"></script>
 <script src="../../styles/bootstrapIndexAssets-js/docs.min.js"></script>
 <script src="../../scripts/regression.js"></script>
