--- a/views/index.html
+++ b/views/index.html
@@ -46,6 +46,7 @@
                 <ul class="nav navbar-nav">
                   <li><a href="/">Home</a></li>
                   <li><a href='/theGuide'>The Guide</a><li>
+                  <li><a href='/overview'>Machine Learning Overview</a><li>
                   <li><a href="/team">The Team</a></li>
                   </li>
                 </ul>
