fixes ml intro bug

--- a/public/views/partials/mlintro.html
+++ b/public/views/partials/mlintro.html
@@ -7,6 +7,7 @@ svg {
 </style>
 
 <br><br><br><br>
+<div class="container mlintro" ng-controller='MLIntroController'>
 <div class="container index">
        <div class = "content">
         <div class="row featurette">
@@ -146,10 +147,10 @@ svg {
       </div>
     </div>      
   </div>
+</div>
 <script src="../../styles/bootstrapDist/js/bootstrap.min.js"></script>
 <script src="../../styles/bootstrapIndexAssets-js/docs.min.js"></script>
 <script src="../../scripts/regression.js"></script>
 <script src="../../scripts/classification.js"></script>
 <script src="../../scripts/hypothesis.js"></script>
-
 
