--- a/views/index.html
+++ b/views/index.html
@@ -21,7 +21,7 @@
     <link rel="shortcut icon" href="./../assets/ico/favicon.ico">
     <link rel='stylesheet' href="../styles/bootstrapDist/css/bootstrap.min.css" >
     <link rel='stylesheet' href="../styles/index.css">
-    <link rel="stylesheet" type="text/css" href="../bower_components/c3/c3.css">
+    <link rel="stylesheet" type="text/css" href="../styles/c3.css">
     <link href='http://fonts.googleapis.com/css?family=Averia+Sans+Libre:400,700|Lemon' rel='stylesheet' type='text/css'>
     <title>A Visual Guide to Machine Learning</title>
 
